working on landscape.
- Hills are done.
- River need to come.

--- a/CastleEnv/Config/DefaultEngine.ini
+++ b/CastleEnv/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=CastleEnv
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+EditorStartupMap=/Game/Maps/CastleEnv.CastleEnv
+GameDefaultMap=/Game/Maps/CastleEnv.CastleEnv
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
